--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
     - org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
     - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
   cloud.consul.enabled: false
-  data.mongodb.uri: mongodb://localhost:27017/service-one
+  data.mongodb.uri: mongodb://service-one-db-0:27017/service-one
 logging:
   level:
     org.springframework.web: DEBUG
